--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,28 @@
 .App {
-  text-align: center;
+  position: relative;
+  overflow-x:clip;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App>:nth-child(1){
+  background:var(--black);
+  position: relative;
 }
+.white-gradient{
+  position: absolute;
+  width: 20rem;
+  height: 20rem;
+  background: rgba(255, 255, 255, 0.522);
+  filter: blur(150px);
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  border-radius: 150px;
+
 }
+.white-gradientFooter{
+  position: absolute;
+  width: 1rem;
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+  background: rgba(255, 255, 255, 0.522);
+  
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
